--- a/app/index.html
+++ b/app/index.html
@@ -2,25 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Maciej Olszewski Photography Portfolio</title>
 
   <!--build:css css/styles.min.css-->
-  <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title">
-  <link rel="stylesheet" href="/css/styles2.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <!--endbuild-->
-
   <!--build:js js/main.min.js -->
-  <!-- <script src="js/lib/filename.js"></script> -->
-  <script src="js/main.js"></script>
+  <script src="js/lib/jquery-3.1.1.js" charset="utf-8"></script>
+  <script src="js/lib/imagesloaded.pkgd.js" charset="utf-8"></script>
+  <script src="js/lib/masonry.pkgd.js" charset="utf-8"></script>
+  <script src="js/main.js" charset="utf-8"></script>
   <!-- endbuild -->
+
 </head>
 <body>
-  <!--build:remove -->
-<h1>Will be removed after build</h1>
-  <!-- endbuild -->
-  <h2>Gulp workflow</h2>
-  <h2>Gulp workflow</h2>
-  <h2>Gulp workflow</h2>
+<header>
+
+</header>
+<div class="images">
+  <div class="grid-width"></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+
+</div>
+
 
 </body>
 </html>
