--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <title>Maciej Olszewski Photography Portfolio</title>
 
   <!--build:css css/styles.min.css-->
-  <link rel="stylesheet" href="/css/normalize.css">
+  <!-- <link rel="stylesheet" href="/css/normalize.css"> -->
   <link rel="stylesheet" href="/css/styles.css">
   <!--endbuild-->
   <!--build:js js/main.min.js -->
@@ -18,7 +18,8 @@
 </head>
 <body>
 <header>
-
+<h1><p>Maciej </p><p>Olszewski</p></h1>
+<h2>portfolio</h2>
 </header>
 <div class="images">
   <div class="grid-width"></div>
