--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <!--endbuild-->
   <!--build:js js/main.min.js -->
   <script src="js/lib/jquery-3.1.1.js" charset="utf-8"></script>
+  <script src="js/lib/lightbox.js" charset="utf-8"></script>
   <script src="js/lib/imagesloaded.pkgd.js" charset="utf-8"></script>
   <script src="js/lib/masonry.pkgd.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
@@ -18,12 +19,20 @@
 </head>
 <body>
 <header>
-<h1><p>Maciej </p><p>Olszewski</p></h1>
+<h1><span class="bigger">Maciej </span><span class="bigger">Olszewski</span></h1>
 <h2>portfolio</h2>
+<p class="copyrights">&copy; M. Olszewski 2016</p>
 </header>
 <div class="images">
   <div class="grid-width"></div>
-  <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
+  <?php
+    $dir = "./images/photo/*.jpg";
+    $images = glob( $dir );
+    foreach( $images as $image ):
+      echo '<div class="grid-item"><a href=="'.$image.'" data-lightbox="images"><img src="'.$image.'" alt=""></a></div>';
+    endforeach;
+ ?>
+  <div class="grid-item"><a href="http://placehold.it/1200x800" data-lightbox="images"><img src="http://placehold.it/1200x800" alt=""></a></div>
   <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
   <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
   <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
@@ -36,7 +45,16 @@
   <div class="grid-item"><img src="http://placehold.it/1200x800" alt=""></div>
 
 </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-49674250-6', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
